# kour-ai-rs

./: .gitignore  LICENSE  README.md  forge.config.js  index.css  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  webpack.plugins.ts
.github/workflows/: build.yml  main.yml  release.yml  test-on-pr.yml
electron-llm-chat/: fileManager.js  index.css  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js
electron-llm-chat/helper/: fileManager.js
electron-llm-chat/tools/: EXAMPLE_PROMPT.md  checkOnline.js  extract.js  find.js  index.js  loadFileTool.js  ls.js  mapQueryGlobTool.js  mapQueryTool.js  notesTool.js  produceCropTool.js  utils.js
helper/: fileManager.js  index.js  xlsxWorker.js
old_app/: DEFAULT_PROMPT.md  README.md  package-lock.json  tsconfig.json
old_app/src/: index.ts  preload.ts  renderer.ts
src/: App.css  App.tsx  commands.ts  index.html  index.ts  main.d.ts  preload.d.ts  preload.ts  types.ts
src-tauri/: 2  Cargo.toml  rustc-ice-2025-07-03T06_02_09-255580.txt  rustc-ice-2025-07-04T00_24_59-272104.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: DEFAULT_PROMPT.md  chat.rs  error.rs  fd.rs  file_handler.rs  filter_files.rs  interaction.rs  lib.rs  libreoffice.rs  main.rs  openrouter.rs  search.rs  settings.rs  ui_events.rs  utils.rs
src-tauri/src/tools/: ask_files.rs  check_online.rs  extract.rs  find.rs  load_file.rs  ls.rs  make_file.rs  map_query.rs  mod.rs  notes.rs  roll_dice.rs  xlsx_converter.rs
src-tauri/src/tools/extract/: extract_eml.rs  extract_msg.rs  extract_zip.rs  mod.rs
src-tauri/src/tools/ref_impls/: email-extractor.js
src-tauri/src/utils/: jailed.rs
src/App/: app.css  app.tsx
src/components/: TopBar.tsx  (+12 more)
tools/: checkOnline.js  extract.js  find.js  loadFileTool.js  ls.js  mapQueryTool.js  notesTool.js  produceCropTool.js
(+16 files in other folders)
