[package]
name = "kour-ai-rs"
version = "0.5.1-1"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# codegen-units = 1 # Allows LLVM to perform better optimization.
# lto = true # Enables link-time-optimizations.
# opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
# panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.


[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kour_ai_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
thiserror = "2"
reqwest = { version = "0.12.5", features = ["json", "stream"] }
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
futures = "0.3"
rand = "0.9"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
zip = "4"
mail-parser = "0.11"
mime = "0.3"
calamine = "0.28"
base64 = "0.22.1"
sha2 = "0.10.8"
tempfile = "3.10.1"
anyhow = "1.0.86"
csv = "1"
regex = "1"
sanitize-filename = "0.6.0"
html2md = "0.2"
tokio-util = "0.7.15"
schemars = "1.0.3"
tiny_msg = "0.2.0"
tauri-plugin-dialog = "2"
globset = "0.4.16"
shlex = "1.3.0"
ignore = "0.4.22"
rayon = "1.10.0"
camino = { version = "1.1.10", features = ["serde"] }
notify = "8.1.0"
